Several important features & fixes. See extended
- Fixed wildcards incorrectly matching longer strings where the pattern would not cover the entirety of it

- Modified error print message to be more abstract and accurate

- Refactored wildcard functions to use a default instead of overloads

- Fixed program crashing when ran without arguments

- Implemented new flag for exporting @import's to a certain path

- Implemented new flag for specifying a rfscss spec inline

- Implemented new flag to create a list of selectors, instead of a dummy rfscss spec

- Added more precise argument checking and error messages for invalid arguments

- Fixed flags never being active because they were being compared as two pointers

- Fixed rfscss pattern matching so it now ignores trailing whitespace (trim)

- Disabled debug mode

--- a/tests/build.css
+++ b/tests/build.css
@@ -1,8 +1,8 @@
-#id_selector {
+#id_selector .inside-id_selector {
     color: blue;
 }
 
-.selector-1{
+.selector-1 {
     color: red;
 }
 
